--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -17,7 +17,7 @@
         height: 100%;
         display: flex;
         align-items: center;
-        a{
+        .link{
           text-decoration: none;
           text-transform: uppercase;
           color: black;
