--- a/resources/scss/partials/_main.scss
+++ b/resources/scss/partials/_main.scss
@@ -8,7 +8,7 @@
     background-color: black;  
     padding-bottom: 20px;  
     .container-card{
-        width: 70%;
+        width: 100%;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -24,17 +24,11 @@
             top: -15px;
             left: 60px;
         }
-        .ancor{
-            text-decoration: none;
-            width: calc(100% / 6);
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            .box-card{
-                // width: calc(100% / 6);
-                // display: flex;
-                // align-items: center;
-                // flex-direction: column;
+        .box-card{
+            width: calc(100% / 4 - 10%);
+            .ancor{
+                text-decoration: none;
+          
                 h3{
                     font-size: 12px;
                     color: white;
@@ -43,9 +37,20 @@
                     text-align: center;
                 }
                 img{
-                    width: 60%;
+                    width: 100%;
+                    height: 100%;
+                    aspect-ratio: 1;
                 }
+                
             }
+        }
+        .modifica{
+            text-decoration: none;
+            padding: 5px;
+            border-radius: 5px;
+            background-color: rgb(255, 200, 0);
+            width: 27%;
+            color: white;
         }
     }
 }
